--- a/Views/Booking/HomePage.cshtml
+++ b/Views/Booking/HomePage.cshtml
@@ -19,7 +19,7 @@
 
         <!-- Top Right Quadrant - Image -->
         <div class="col-md-6 p-0">
-            <img src="/Images/Hospital.jpg" alt="Ambulance" class="img-fluid w-100 h-100" style="object-fit: cover;">
+            <img src="~/Images/Hospital.jpg" alt="Ambulance" class="img-fluid w-100 h-100" style="object-fit: cover;">
         </div>
     </div>
 
@@ -28,7 +28,7 @@
         <!-- Bottom Left Quadrant - SOS Button as Image -->
         <div class="col-md-6 p-0">
             <button id="sosButton" class="btn p-0 border-0 w-100 h-100">
-                <img src="/Images/SOS.jpg" alt="Emergency SOS" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                <img src="~/Images/SOS.jpg" alt="Emergency SOS" class="img-fluid w-100 h-100" style="object-fit: cover;">
             </button>
         </div>
 
